--- a/my-project/src/Update/EditInfo.css
+++ b/my-project/src/Update/EditInfo.css
@@ -35,7 +35,7 @@ html {
     font-weight: bold;
   }
   
-  input[id="name"] {
+  input[id="firstname"] {
     font-size: 16px;
     display: block;
     padding-left: 0.2cm;
@@ -48,7 +48,7 @@ html {
     border-radius: 7px;
   }
   
-  input[id="surname"] {
+  input[id="lastname"] {
     font-size: 16px;
     display: block;
     padding-left: 0.2cm;
@@ -74,7 +74,7 @@ html {
     border-radius: 7px;
   }
   
-  input[id="phone"] {
+  input[id="phoneNumber"] {
     font-size: 16px;
     display: block;
     padding-left: 0.2cm;
