--- a/my-project/src/Components/AddProduct/AddProduct.css
+++ b/my-project/src/Components/AddProduct/AddProduct.css
@@ -79,8 +79,8 @@
   .imgPreview {
     text-align: center;
     margin-top: 10px;
-    height: 200px;
-    width: 500px;
+    height: 8rem;
+    width: 8rem;
     border-left: 1px solid gray;
     border-right: 1px solid gray;
     border-top: 1px solid gray;
