--- a/my-project/src/Components/MyProduct/MyProduct.css
+++ b/my-project/src/Components/MyProduct/MyProduct.css
@@ -30,6 +30,17 @@
   align-items: center;
   width: 10rem;
 }
+.product-container>button{
+  background-color: blanchedalmond;
+  border-radius: 10px;
+  border: 0px;
+  padding: 15px;
+  font-size: large;
+  display:flex;
+  position: relative;
+ 
+  margin-top: 1cm;
+}
 
 .product-item
   > .product-button-container
@@ -39,4 +50,5 @@
   border-radius: 10px;
   border: 0px;
   padding: 10px;
+  
 }
