--- a/my-project/src/Components/SignUp/signup.css
+++ b/my-project/src/Components/SignUp/signup.css
@@ -125,7 +125,7 @@ input[id="password"] {
   border-radius: 7px;
 }
 
-input[id="confirm-password"] {
+input[id="confirmPassword"] {
   font-size: 16px;
   display: block;
   padding-left: 0.2cm;
